--- a/templates/index.html
+++ b/templates/index.html
@@ -62,7 +62,7 @@
             <tbody>
                 {% for student in students %}
                 <tr>
-                    <td>{{ student.name|safe }}</td>
+                    <td>{{ student.name|e }}</td>
                     <td>{{ student.age }}</td>
                     <td>{{ student.grade }}</td>
                     <td>
